java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testImplementAbstractMethodsHint6-hints.pass
LBL_FIX_Impl_Abstract_Methods
